--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="blog-preview-card-main/assets/images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;600&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
   <p class="fourth-section">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
   <div class="fifth-section">
-    <img src="../blog-preview-card-main/assets/images/image-avatar.webp" alt="Greg Hooper">
+    <img src="blog-preview-card-main/assets/images/image-avatar.webp" alt="Greg Hooper">
     <p>Greg Hooper</p>
   </div>
 
